Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/importChecks/ImportCanonical1.out
ImportCanonical2.java:4:13: compiler.err.import.requires.canonical: p1.A1.I
1 error
